# jobsdb-auto-apply

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  PRIVACY_CHECKLIST.md  README.md  pyproject.toml
.github/workflows/: ci.yml
accounts/: .gitkeep  example.json
config/: defaults.yaml  settings.py
docs/skills/: start-apply.md
docs/superpowers/plans/: 2026-07-20-v2.0-implementation.md
docs/superpowers/specs/: 2026-07-20-v2.0-design.md  2026-07-21-manual-login-mode-design.md
docs/testing/: 2026-07-21-manual-login-mode.tdd.md
scripts/: auto_apply.py  clean_data.py  run_apply.sh
src/: factory.py  main.py  orchestrator.py
src/accounts/: __init__.py  registry.py
src/browser/: engine.py  playwright_browser.py  playwright_page_controller.py  profile.py  stealth.py
src/browser/fake/: fake_browser.py  fake_page.py
src/browser/ports/: browser_port.py  page_controller.py
src/jobsdb/: apply_flow.py  exceptions.py  homepage.py  job_detail.py  login.py  selectors.py
src/jobsdb/apply/: __init__.py  detectors.py  flow.py  step_base.py
src/jobsdb/apply/steps/: __init__.py  captcha_check.py  cover_letter_js.py  cover_letter_step.py  navigation.py  popup_dismiss.py  questions_step.py  resume_step.py  review_step.py  submit_step.py
src/monitor/: logger.py  tracker.py
src/scheduler/: queue.py
src/simulation/: behavior.py  mouse.py  scroll.py  timing.py  typing.py
src/storage/: cookies.py  database.py  models.py
src/utils/: retry.py  screenshot.py
tests/: TEST_PLAN.md  conftest.py  test_auto_apply_env.py  test_database.py  test_e2e_with_chrome_cookies.py  test_mouse.py  test_scheduler.py  test_stealth.py  verify_session_persist.py
tests/characterization/: test_accounts_behavior.py  test_apply_flow_behavior.py  test_database_behavior.py  test_queue_behavior.py  test_selectors_snapshot.py  test_simulation_behavior.py
tests/e2e/: E2E_GUIDE.md  conftest.py  test_auto_apply_env.py  test_e2e_auto_detect.py  test_e2e_chrome_profile.py  test_e2e_full_cookies.py  test_e2e_live.py  test_e2e_save_session.py  test_e2e_with_chrome_cookies.py  test_integration.py  test_stealth.py  test_timing_and_flow.py  verify_session_persist.py
tests/unit/: test_accounts.py  test_apply_steps.py  test_apply_with_fake_page.py  test_browser_ports.py  test_cookies.py  test_cover_letter_no_include.py  test_database.py  test_factory.py  test_fake_page.py  test_login_manual.py  test_mouse.py  test_orchestrator.py  test_playwright_controller.py  test_quick_apply_only.py  test_scheduler.py  test_screenshot.py  test_tracker.py  test_typing.py
