[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobsdb-resume-assistant"
version = "0.1.0"
description = "JobsDB 简历智能投递助手 - 模拟人类行为的自动化简历投递系统"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "User"}
]
keywords = ["jobsdb", "automation", "resume", "job-application"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "numpy>=1.24.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
jobsdb-assistant = "src.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*", "tests*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
# v2.0: 测试三分类 marker
markers = [
    "e2e: 需要真实 JobsDB 网络 + 手动登录(慢,CI 不跑,默认跳过)",
    "characterization: 锁定 v1.0 行为的安全网(快,CI 跑)",
    "unit: 纯单元测试,不依赖浏览器(快,CI 必跑)",
]
# 默认不跑 e2e(本地 pytest 也不会误起浏览器)
addopts = "-m 'not e2e'"

[tool.coverage.run]
source = ["src"]
# main.py 是 CLI 入口(@app.command 处理器 + rich console I/O),
# 经手动/CLI 测试,不纳入单测覆盖率统计(其逻辑由被调模块覆盖)
omit = ["*/tests/*", "*/__pycache__/*", "*/main.py"]

[tool.coverage.report]
# v2.0 阶段5: 起步门槛 60%(后续逐步提至 80%)
fail_under = 60
show_missing = true
